test/expected/declare_o_arrow_i.out
struct S; declare -> as operator returning int
                                  ^
35: error: operator -> must return a pointer to struct, union, or class
